# fundo

./: .gitignore  Implement.md  README.md  docker-compose.yml
.github/workflows/: cd.yml  ci.yml
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: database.py  main.py  models.py
backend/app/routes/: todos.py
backend/tests/: test_todos.py
frontend/: .gitignore  Dockerfile  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/components/: TodoForm.tsx  TodoItem.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  field.tsx  form.tsx  input-group.tsx  label.tsx  textarea.tsx
frontend/src/lib/: schemas.ts
frontend/src/pages/: Dashboard.tsx
frontend/src/services/: api.ts  types.ts
